<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtDateToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/placeholder_dateTitle"
            android:focusable="true"
            android:focusableInTouchMode="true">
        <requestFocus/>
        </TextView>

        <TextView
            android:id="@+id/txtTreadmillTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:layout_below="@id/txtDateToday"
            android:layout_marginTop="20dp"
            android:textColor="#7fffffff"
            android:text="@string/treadmill_subtitle_txt"
            android:textStyle="italic"/>

                            <ImageButton
                                android:id="@+id/btnLessTreadmillMinutes"
                                android:layout_width="60dp"
                                android:layout_height="45dp"
                                android:src="@drawable/ic_minus"
                                android:layout_below="@id/txtTreadmillTitle"
                                android:layout_toStartOf="@id/txtCounterTreadmillMinutes"
                                android:tint="@android:color/holo_red_dark"
                                android:background="@drawable/button_minus"/>

                            <TextView
                                android:id="@+id/txtCounterTreadmillMinutes"
                                android:layout_width="60dp"
                                android:layout_height="45dp"
                                android:text="0"
                                android:background="@drawable/back_counter"
                                android:gravity="center"
                                android:textSize="18sp"
                                android:textColor="#ffffff"
                                android:layout_below="@id/txtTreadmillTitle"
                                android:layout_centerHorizontal="true">
                            </TextView>

                            <ImageButton
                                android:id="@+id/btnMoreTreadmillMinutes"
                                android:layout_width="60dp"
                                android:layout_height="45dp"
                                android:src="@drawable/ic_add"
                                android:layout_below="@id/txtTreadmillTitle"
                                android:layout_toEndOf="@id/txtCounterTreadmillMinutes"
                                android:tint="#02E710"
                                android:background="@drawable/button_plus"/>

                            <TextView
                                android:id="@+id/txtTreadmillMinutes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/minutes"
                                android:layout_alignStart="@id/txtTreadmillTitle"
                                android:layout_alignBottom="@id/txtCounterTreadmillMinutes"
                                android:layout_marginBottom="10dp"
                                android:textSize="14sp"
                                android:textStyle="italic"
                                android:textColor="#ffffff"/>



                  <ImageButton
                    android:id="@+id/btnLessTreadmillKilometers"
                      android:layout_width="60dp"
                      android:layout_height="45dp"
                    android:src="@drawable/ic_minus"
                    android:layout_below="@id/txtCounterTreadmillMinutes"
                    android:layout_toStartOf="@id/txtCounterTreadmillKilometers"
                    android:tint="@android:color/holo_red_dark"
                      android:layout_marginTop="10dp"
                    android:background="@drawable/button_minus"/>

                <TextView
                    android:id="@+id/txtCounterTreadmillKilometers"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:text="0.0"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:background="@drawable/back_counter"
                    android:textColor="#ffffff"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txtCounterTreadmillMinutes"
                    android:layout_centerHorizontal="true">
                </TextView>



                <ImageButton
                    android:id="@+id/btnMoreTreadmillKilometers"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_add"
                    android:layout_below="@id/txtCounterTreadmillMinutes"
                    android:layout_toEndOf="@id/txtCounterTreadmillKilometers"
                    android:tint="#02E710"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_plus"/>

                <TextView
                    android:id="@+id/txtTreadmillKilometers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometers"
                    android:layout_alignStart="@id/txtTreadmillTitle"
                    android:layout_alignBottom="@id/txtCounterTreadmillKilometers"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="#ffffff"/>



        <TextView
            android:id="@+id/txtPushUpsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:layout_below="@id/txtCounterTreadmillKilometers"
            android:layout_marginTop="20dp"
            android:textColor="#7fffffff"
            android:text="@string/push_ups__subtitle_txt"
            android:textStyle="italic"/>

        <ImageButton
            android:id="@+id/btnLessPushups"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_minus"
            android:layout_below="@id/txtPushUpsTitle"
            android:layout_toStartOf="@id/txtCounterPushups"
            android:tint="@android:color/holo_red_dark"
            android:background="@drawable/button_minus"/>

        <TextView
            android:id="@+id/txtCounterPushups"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:text="0"
            android:gravity="center"
            android:textSize="18sp"
            android:background="@drawable/back_counter"
            android:textColor="#ffffff"
            android:layout_below="@id/txtPushUpsTitle"
            android:layout_centerHorizontal="true">
        </TextView>



        <ImageButton
            android:id="@+id/btnMorePushups"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_add"
            android:layout_below="@id/txtPushUpsTitle"
            android:layout_toEndOf="@id/txtCounterPushups"
            android:tint="#02E710"
            android:background="@drawable/button_plus"/>



                            <TextView
                                android:id="@+id/txtOtherTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_marginStart="16dp"
                                android:textSize="16sp"
                                android:layout_below="@id/txtCounterPushups"
                                android:layout_marginTop="20dp"
                                android:textColor="#7fffffff"
                                android:text="@string/other_subtitle_txt"
                                android:textStyle="italic"/>

                            <EditText
                                android:id="@+id/txtInputOther"
                                android:textColor="#ffffff"
                                android:textColorHint="#ffffff"
                                android:hint="@string/hint_enter_other_activies"
                                android:textSize="16sp"
                                android:background="#3fffffff"
                                android:textStyle="italic"
                                android:gravity="start"

                                android:scrollbarFadeDuration="0"
                                android:scrollbars="vertical"
                                android:scrollbarAlwaysDrawVerticalTrack="true"
                                android:scrollHorizontally="false"

                                android:layout_width="200dp"
                                android:layout_height="100dp"
                                android:layout_alignTop="@id/txtOtherTitle"
                                android:layout_toEndOf="@id/txtOtherTitle"
                                android:layout_marginStart="40dp"/>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">



        <ImageView
        android:id="@+id/btnCloseInput"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"

        android:background="@drawable/button_v2"
        android:padding="5dp"
        android:src="@drawable/ic_close_red"/>


        <ImageView
            android:id="@+id/btnSaveInput"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"

            android:background="@drawable/button_v3"
            android:padding="5dp"
            android:tint="#023104"
            android:src="@drawable/ic_save_black"/>

    </RelativeLayout>



</LinearLayout>